// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WindowTitleTest renders nothing if fullscreen 1`] = `null`;

exports[`WindowTitleTest renders with actionable icons 1`] = `
<header
  className="windowTitle"
>
  <div
    className="titleContainer"
  >
    <span>
      logo
    </span>
    <span
      className="headerText"
    >
      title 1
    </span>
  </div>
  <div
    className="actionableIconsContainer"
  >
    <div>
      icon1
    </div>
    <div>
      icon2
    </div>
  </div>
</header>
`;

exports[`WindowTitleTest renders with custom class name 1`] = `
<header
  className="windowTitle custom-class-name"
>
  <div
    className="titleContainer"
  >
    <span>
      logo
    </span>
    <span
      className="headerText"
    >
      title 1
    </span>
  </div>
  <div
    className="actionableIconsContainer"
  >
    <div>
      icon1
    </div>
    <div>
      icon2
    </div>
  </div>
</header>
`;

exports[`WindowTitleTest renders with custom header text class name 1`] = `
<header
  className="windowTitle"
>
  <div
    className="titleContainer"
  >
    <span>
      logo
    </span>
    <span
      className="headerText custom-class-name"
    >
      title 1
    </span>
  </div>
  <div
    className="actionableIconsContainer"
  >
    <div>
      icon1
    </div>
    <div>
      icon2
    </div>
  </div>
</header>
`;

exports[`WindowTitleTest renders without actionable buttons for mac 1`] = `
<header
  className="windowTitle"
>
  <div
    className="titleContainer"
  >
    <span>
      logo
    </span>
    <span
      className="headerText"
    >
      title 1
    </span>
  </div>
</header>
`;

exports[`WindowTitleTest renders without actionable icons 1`] = `
<header
  className="windowTitle"
>
  <div
    className="titleContainer"
  >
    <span>
      logo
    </span>
    <span
      className="headerText"
    >
      title 1
    </span>
  </div>
</header>
`;

exports[`WindowTitleTest renders without children & actionable icon 1`] = `
<header
  className="windowTitle"
>
  <div
    className="titleContainer"
  >
    <span
      className="headerText"
    >
      title 1
    </span>
  </div>
</header>
`;
